After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 720410 - GPL license link doesn't specify "or later"
GPL license link doesn't specify "or later"
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2013-12-13 18:06 UTC by William Jon McCann
Modified: 2013-12-16 16:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
about dialog: differentiate GPL "or later" versions (4.17 KB, patch)
2013-12-16 16:10 UTC, William Jon McCann
needs-work Details | Review
about dialog: differentiate GPL "or later" versions (4.18 KB, patch)
2013-12-16 16:18 UTC, William Jon McCann
none Details | Review
screenshot (45.90 KB, image/png)
2013-12-16 16:21 UTC, William Jon McCann
  Details
about dialog: differentiate GPL "or later" versions (4.25 KB, patch)
2013-12-16 16:36 UTC, William Jon McCann
committed Details | Review

Description William Jon McCann 2013-12-13 18:06:56 UTC
When an application uses, for example:
"license-type", GTK_LICENSE_GPL_2_0,

There is no way to specify whether it includes "or later" versions.
Comment 1 Matthias Clasen 2013-12-14 16:01:07 UTC
The current short text doesn't really lend itself to adding license version information:

This program comes with ABSOLUTELY NO WARRANTY; for details see http://...

No place to put 'or later' here, and there's no good url for GPLv2 'or later'.
Comment 2 William Jon McCann 2013-12-16 16:10:40 UTC
Created attachment 264298 [details] [review]
about dialog: differentiate GPL "or later" versions
Comment 3 William Jon McCann 2013-12-16 16:18:59 UTC
Created attachment 264299 [details] [review]
about dialog: differentiate GPL "or later" versions

Remember to translate the name.
Comment 4 William Jon McCann 2013-12-16 16:21:52 UTC
Created attachment 264300 [details]
screenshot
Comment 5 Matthias Clasen 2013-12-16 16:27:09 UTC
Review of attachment 264298 [details] [review]:

::: gtk/gtkaboutdialog.c
@@ +96,3 @@
 /* Translators: this is the license preamble; the string at the end
  * contains the URL of the license.
  */

Should probably update the translator comment to state that the name of the license will be displayed as link text

@@ +107,3 @@
+/* URLs for each GtkLicense type; keep in the same order as the enumeration */
+static const LicenseInfo gtk_license_info [] = {
+  { N_("Unknown"), NULL },

If unknown ever ends up as link text in the ui, that'll probably look odd - might be better to say _("License") ?

@@ +108,3 @@
+static const LicenseInfo gtk_license_info [] = {
+  { N_("Unknown"), NULL },
+  { N_("Custom License") , NULL },

This will never show up in the ui, right ? May save translator work by not marking it
Comment 6 William Jon McCann 2013-12-16 16:36:38 UTC
Created attachment 264304 [details] [review]
about dialog: differentiate GPL "or later" versions
Comment 7 Matthias Clasen 2013-12-16 16:39:48 UTC
Review of attachment 264304 [details] [review]:

thanks, looks good to me now