about dialog: differentiate GPL "or later" versions

https://bugzilla.gnome.org/show_bug.cgi?id=720410